# evaluate_omni_dataset

./: CMakeLists.txt  README.md  package.xml
launch/: gt_evaluationStart.launch
logs/: 4_robots.txt  example.txt
matlab/: allRuns.m  evalMatlab.m  filterOutput.m  fullEval.m  readOutput.m  runStatistics.m
resources/: RRfinal.xml  TR.xml
src/: evalMatlab.m  evaluate_omni_dataset.cpp  evaluate_omni_dataset.h  filterOutput.m  fullEval.m
